# BM-ECB

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config_example.json  mkdocs.yml  pyproject.toml
docs/: EXPERIMENTAL_FINDINGS.md  IMPROVEMENTS.md  LITERATURE_ASSESSMENT.md  METHODOLOGY.md  PLAN_BVAR_BEQ_FIXES.md  PLAN_YOY_MIGRATION.md  PRD.md  PROJECT_WRITEUP.md  TROUBLESHOOTING.md  actuals_vintage.csv  arc_cache.json  configuration.md  consensus_cache.json  daily_log.csv  dashboard.html  dashboard.md  data.json  index.html  index.md  installation.md  leaderboard.csv  leaderboard.md  quickstart.md  report.html  report_template.html
scripts/: _check_fred_my.py  _check_new_ind.py  _gen_leaderboard.py  _run_components.py  _save_bvar.py  _test_leaderboard.py  advance_estimate_benchmark.py  ar1_benchmark.py  backtest_all_models.py  backtest_malaysia.py  check_actuals.py  check_gdp_official.py  component_backtest.py  daily_update.py  debug_beq.py  debug_beq_trace.py  debug_beq_vintage.py  explore_api.py  explore_demand.py  explore_new_data.py  find_monthly.py  generate_dashboard.py  generate_dashboard_md.py  generate_standalone_dashboard.py  grid_search.py  leaderboard_with_advance.py  map_sectors.py  news_decomposition_demo.py  nowcast_components.py  nowcast_components_v2.py  nowcast_with_levels.py  run_malaysia_nowcast.py  search_datasets.py  search_datasets2.py  sense_check.py  show_levels.py  test_all_models.py  test_arc.py  test_bnm_history.py  test_bnm_invest.py  (+4 more)
site/: 404.html  actuals_vintage.csv  dashboard.html  data.json  index.html  leaderboard.csv  (+2 more)
(+120 files in other folders)
