[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nowcasting_toolbox"
version = "0.1.0"
description = "Python port of the ECB Nowcasting Toolbox with Malaysian data pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nowcasting Toolbox Contributors"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.scripts]
nowcast = "nowcasting_toolbox.cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/nowcasting_toolbox"]
